removing ood code, tidying up data

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<script id="subindexTmpl" type="text/x-jquery-tmpl">
                 <div class="item">
                  <div class="item-image">
-                     <a href="#subalbum/${cid}/pho/${attributes.pid}"><img src="${attributes.image}" alt="${attributes.title}" /></a>
+                     <a href="#subalbum/${cid}/pho/${attributes.pid}"><img src="${attributes.image}" alt="${attributes.title}" alt="No images in this folder"/></a>
                  </div>
                  <div class="item-artist">${attributes.artist}</div>
                     <div class="item-title">${attributes.title}</div>
