finitial fix for bookmarking depth 3

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<script id="subindexTmpl" type="text/x-jquery-tmpl">
                 <div class="item">
                  <div class="item-image">
-                     <a href="#subalbum/${cid}/pho/${attributes.pid}"><img src="${attributes.image}" alt="${attributes.title}" alt="No images in this folder"/></a>
+                     <a href="#imageid/${cid}/subalbum/"><img src="${attributes.image}" alt="${attributes.title}" alt="No images in this folder"/></a>
                  </div>
                  <div class="item-artist">${attributes.artist}</div>
                     <div class="item-title">${attributes.title}</div>
@@ -41,7 +41,7 @@
                     <div class="item-price">$${attributes.price}</div>
 
                     <div class="item-link"><a href="${attributes.url}">Buy this item on Amazon</a></div>
-                    <div class="back-link"><a href="#">&laquo; Back to Items</a></div>
+                    <div class="back-link"><a href="#">&laquo; Back to Main Menu</a></div>
                   </div>
                 </div>
                 </script>
