rewrote to use backbones at rather than cid lookups, corrected bookmarking support

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<script id="subindexTmpl" type="text/x-jquery-tmpl">
                 <div class="item">
                  <div class="item-image">
-                     <a href="#imageid/${cid}/subalbum/"><img src="${attributes.image}" alt="${attributes.title}" alt="No images in this folder"/></a>
+                     <a href="#imageid/${attributes.pid}/subalbum/"><img src="${attributes.image}" alt="${attributes.title}" alt="No images in this folder"/></a>
                  </div>
                  <div class="item-artist">${attributes.artist}</div>
                     <div class="item-title">${attributes.title}</div>
