updating css for corners, stripping dev comments

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div id="container">
             <div id="header">
                 <h1>
-                    The 3-Level Backbone Gallery
+                    <a href="#">The 3-Level Backbone Gallery</a>
                 </h1>
 
                 
