adding sort support for all levels

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<!-- Subalbum template -->
 				<script id="subindexTmpl" type="text/x-jquery-tmpl">
                 <div class="item">
-                 <div class="item-image">
+                 <div class="item-image subalbum">
                      <a href="#imageid/${attributes.pid}/subalbum/"><img src="${attributes.image}" alt="${attributes.title}" alt="No images in this folder"/></a>
                  </div>
                  <div class="item-artist">${attributes.artist}</div>
