tidying up meta-data for examples, css

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                  </div>
                  <div class="item-artist">${attributes.artist}</div>
                     <div class="item-title">${attributes.title}</div>
-                    <div class="item-price">$${attributes.price}</div>
+                    <div class="item-years">${attributes.years}</div>
                 </div>
                 </script>
 				
@@ -43,8 +43,8 @@
                     <div class="item-title">${attributes.title}</div>
                     <div class="item-price">$${attributes.price}</div>
 
-                    <div class="item-link"><a href="${attributes.url}">Buy this item on Amazon</a></div>
-                    <div class="back-link"><a href="#">&laquo; Back to Main Menu</a></div>
+                    <div class="item-link"><a href="${attributes.url}">Buy this item</a></div>
+                    <div class="back-link"><a href="#">&laquo; Back to Albums</a></div>
                   </div>
                 </div>
                 </script>
