updating project headers

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-        <title>Addy's Backbone Image Gallery</title>
+        <title>Multi-Level Backbone Image Gallery</title>
         <link rel="stylesheet" href="jsongallery.css" type="text/css" media="screen" charset="utf-8" />
 
 
@@ -54,8 +54,9 @@
         <div id="container">
             <div id="header">
                 <h1>
-                    <a href="#">The 3-Level Backbone Gallery</a>
+                    <a href="#">Multi-Level Backbone Gallery</a>
                 </h1>
+                <h3>An OSS project by Addy Osmani</h3>
 
                 
             </div>
