adding drop-shadow refs to third-level views

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
      
                 <script id="itemTmpl" type="text/x-jquery-tmpl">
                 <div class="item-detail">
-                  <div class="item-image"><img src="${attributes.large_image}" alt="${attributes.title}" /></div>
+                  <div class="item-image drop-shadow round"><img src="${attributes.large_image}" alt="${attributes.title}" /></div>
                   <div class="item-info">
                     <div class="item-artist">${attributes.artist}</div>
                     <div class="item-title">${attributes.title}</div>
@@ -56,7 +56,7 @@
                 <h1>
                     <a href="#">Multi-Level Backbone Gallery</a>
                 </h1>
-                <h3>Created by Addy Osmani</h3>
+                <h3>Created by Addy Osmani for 'Building Single-page Apps With jQuery's Best Friends'</h3>
 
                 
             </div>
