--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         <script src="jquery.tmpl.min.js" type="text/javascript"></script>
         <script src="underscore.js" type="text/javascript"></script>
         <script src="backbone.js" type="text/javascript"></script>
+         <script src="cacheprovider.js" type="text/javascript"></script>
         <script src="gallery.js" type="text/javascript"></script>
     </body>
 </html>
