--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         </div>
         <script src="jquery-1.4.4.min.js" type="text/javascript"></script>
         <script src="jquery.tmpl.min.js" type="text/javascript"></script>
-        <script src="underscore.js" type="text/javascript"></script>
-        <script src="backbone.js" type="text/javascript"></script>
+        <script src="underscore-min.js" type="text/javascript"></script>
+        <script src="backbone-min.js" type="text/javascript"></script>
          <script src="cacheprovider.js" type="text/javascript"></script>
         <script src="gallery.js" type="text/javascript"></script>
     </body>
