--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<script id="subindexTmpl" type="text/x-jquery-tmpl">
                 <div class="item  drop-shadow round">
                  <div class="item-image subalbum">
-                     <a href="#imageid/${attributes.pid}/subalbum/"><img src="${attributes.image}" alt="${attributes.title}" alt="No images in this folder"/></a>
+                     <a href="#subalbum/${subalbum}/${attributes.pid}"><img src="${attributes.image}" alt="${attributes.title}" alt="No images in this folder"/></a> 
                  </div>
                  <div class="item-artist">${attributes.artist}</div>
                     <div class="item-title">${attributes.title}</div>
