--- a/index.html
+++ b/index.html
@@ -64,11 +64,15 @@
                  <div class="jstest">This application requires JavaScript to function correctly.</div>
             </div>
         </div>
-        <script src="jquery-1.4.4.min.js" type="text/javascript"></script>
-        <script src="jquery.tmpl.min.js" type="text/javascript"></script>
-        <script src="underscore-min.js" type="text/javascript"></script>
-        <script src="backbone-min.js" type="text/javascript"></script>
-         <script src="cacheprovider.js" type="text/javascript"></script>
-        <script src="gallery.js" type="text/javascript"></script>
+        <script src="LAB.min.js" type="text/javascript"></script>
+        <script type="text/javascript">
+		   $LAB
+		   .script("jquery-1.4.4.min.js").wait()
+		   .script("jquery.tmpl.min.js")
+		   .script("underscore-min.js")
+		   .script("backbone-min.js")
+		   .script("cacheprovider.js").wait()
+		   .script("gallery.js");      
+        </script>
     </body>
 </html>
